// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Str.Box > border > colored > fn('Hello', { edges: '─', corners: { topLeft: { char: '┌', color: { foreground: 'red' }, bol...) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
────────────────────────────────────────────────────
{
  edges: '─',
  corners: {
    topLeft: {
      char: '┌',
      color: {
        foreground: 'red'
      },
      bold: true
    },
    topRight: {
      char: '┐',
      color: {
        foreground: 'blue'
      },
      bold: true
    },
    bottomRight: {
      char: '┘',
      color: {
        foreground: 'green'
      },
      bold: true
    },
    bottomLeft: {
      char: '└',
      color: {
        foreground: 'yellow'
      },
      bold: true
    }
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
[1m[38;2;255;0;0m┌[39m[22m─────[1m[38;2;0;0;255m┐[39m[22m
─Hello─
[1m[38;2;255;255;0m└[39m[22m─────[1m[38;2;0;128;0m┘[39m[22m
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > border > colored > fn('Hello', { edges: { top: { char: '─', color: { foreground: 'red' } }, right: { char: '│',...) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
────────────────────────────────────────────────────
{
  edges: {
    top: {
      char: '─',
      color: {
        foreground: 'red'
      }
    },
    right: {
      char: '│',
      color: {
        foreground: 'blue'
      }
    },
    bottom: {
      char: '─',
      color: {
        foreground: 'green'
      }
    },
    left: {
      char: '│',
      color: {
        foreground: 'yellow'
      }
    }
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
[38;2;255;0;0m─[39m[38;2;255;0;0m─[39m[38;2;255;0;0m─[39m[38;2;255;0;0m─[39m[38;2;255;0;0m─[39m
[38;2;255;255;0m│[39mHello[38;2;0;0;255m│[39m
[38;2;0;128;0m─[39m[38;2;0;128;0m─[39m[38;2;0;128;0m─[39m[38;2;0;128;0m─[39m[38;2;0;128;0m─[39m
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > border > colored > fn('Hello', { edges: { top: { char: '─', color: { foreground: { r: 255, g: 87, b: 51 } } }, ...) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
────────────────────────────────────────────────────
{
  edges: {
    top: {
      char: '─',
      color: {
        foreground: {
          r: 255,
          g: 87,
          b: 51
        }
      }
    },
    bottom: {
      char: '─',
      color: {
        foreground: 'rgb 100 200 150'
      }
    },
    left: '│',
    right: '│'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
[38;2;255;87;51m─[39m[38;2;255;87;51m─[39m[38;2;255;87;51m─[39m[38;2;255;87;51m─[39m[38;2;255;87;51m─[39m
│Hello│
[38;2;100;200;150m─[39m[38;2;100;200;150m─[39m[38;2;100;200;150m─[39m[38;2;100;200;150m─[39m[38;2;100;200;150m─[39m
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > border > colored > fn('Hello\\nWorld', { edges: { top: { char: '─', color: { foreground: 'cyan' }, bold: true }, right:...) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
World
────────────────────────────────────────────────────
{
  edges: {
    top: {
      char: '─',
      color: {
        foreground: 'cyan'
      },
      bold: true
    },
    right: {
      char: '│',
      color: {
        foreground: 'magenta'
      },
      dim: true
    },
    bottom: {
      char: '─',
      color: {
        foreground: 'cyan'
      },
      bold: true
    },
    left: {
      char: '│',
      color: {
        foreground: 'magenta'
      },
      dim: true
    }
  },
  corners: {
    topLeft: {
      char: '┌',
      color: {
        foreground: 'red'
      },
      bold: true
    },
    topRight: {
      char: '┐',
      color: {
        foreground: 'blue'
      },
      bold: true
    },
    bottomRight: {
      char: '┘',
      color: {
        foreground: 'green'
      },
      bold: true
    },
    bottomLeft: {
      char: '└',
      color: {
        foreground: 'yellow'
      },
      bold: true
    }
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
[1m[38;2;255;0;0m┌[39m[22m[1m[38;2;0;255;255m─[39m[22m[1m[38;2;0;255;255m─[39m[22m[1m[38;2;0;255;255m─[39m[22m[1m[38;2;0;255;255m─[39m[22m[1m[38;2;0;255;255m─[39m[22m[1m[38;2;0;0;255m┐[39m[22m
[2m[38;2;255;0;255m│[39m[22mHello[2m[38;2;255;0;255m│[39m[22m
[2m[38;2;255;0;255m│[39m[22mWorld[2m[38;2;255;0;255m│[39m[22m
[1m[38;2;255;255;0m└[39m[22m[1m[38;2;0;255;255m─[39m[22m[1m[38;2;0;255;255m─[39m[22m[1m[38;2;0;255;255m─[39m[22m[1m[38;2;0;255;255m─[39m[22m[1m[38;2;0;255;255m─[39m[22m[1m[38;2;0;128;0m┘[39m[22m
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > border > colored > fn('Hex', { edges: { top: { char: '═', color: { foreground: '#FF5733' } }, bottom: { char:...) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hex
────────────────────────────────────────────────────
{
  edges: {
    top: {
      char: '═',
      color: {
        foreground: '#FF5733'
      }
    },
    bottom: {
      char: '═',
      color: {
        foreground: '#33FF57'
      }
    },
    left: {
      char: '║',
      color: {
        foreground: '#3357FF'
      }
    },
    right: {
      char: '║',
      color: {
        foreground: '#FF33F5'
      }
    }
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
[38;2;255;87;51m═[39m[38;2;255;87;51m═[39m[38;2;255;87;51m═[39m
[38;2;51;87;255m║[39mHex[38;2;255;51;245m║[39m
[38;2;51;255;87m═[39m[38;2;51;255;87m═[39m[38;2;51;255;87m═[39m
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > border > colored > fn('Text', { edges: { top: { char: '─', color: { foreground: 'white', background: 'blue' } ...) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Text
────────────────────────────────────────────────────
{
  edges: {
    top: {
      char: '─',
      color: {
        foreground: 'white',
        background: 'blue'
      }
    },
    bottom: {
      char: '─',
      color: {
        foreground: 'white',
        background: 'blue'
      }
    },
    left: {
      char: '│',
      color: {
        foreground: 'black',
        background: 'yellow'
      }
    },
    right: {
      char: '│',
      color: {
        foreground: 'black',
        background: 'yellow'
      }
    }
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
[48;2;0;0;255m[38;2;255;255;255m─[39m[49m[48;2;0;0;255m[38;2;255;255;255m─[39m[49m[48;2;0;0;255m[38;2;255;255;255m─[39m[49m[48;2;0;0;255m[38;2;255;255;255m─[39m[49m
[48;2;255;255;0m[38;2;0;0;0m│[39m[49mText[48;2;255;255;0m[38;2;0;0;0m│[39m[49m
[48;2;0;0;255m[38;2;255;255;255m─[39m[49m[48;2;0;0;255m[38;2;255;255;255m─[39m[49m[48;2;0;0;255m[38;2;255;255;255m─[39m[49m[48;2;0;0;255m[38;2;255;255;255m─[39m[49m
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > border > corners > fn('Hello', { corners: '*', edges: { top: '-', bottom: '-', left: '|', right: '|' } }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
────────────────────────────────────────────────────
{
  corners: '*',
  edges: {
    top: '-',
    bottom: '-',
    left: '|',
    right: '|'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
*-----*
|Hello|
*-----*
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > border > corners > fn('Hello', { style: 'double', corners: '+' }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
────────────────────────────────────────────────────
{
  style: 'double',
  corners: '+'
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
+═════+
║Hello║
+═════+
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > border > corners > fn('Hello', { style: 'single', corners: 'o' }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
────────────────────────────────────────────────────
{
  style: 'single',
  corners: 'o'
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
o─────o
│Hello│
o─────o
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > border > corners > fn('Hello\\nWorld', { style: 'single', corners: 'X' }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
World
────────────────────────────────────────────────────
{
  style: 'single',
  corners: 'X'
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
X─────X
│Hello│
│World│
X─────X
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > border > fn('', { style: 'ascii' }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS

────────────────────────────────────────────────────
{
  style: 'ascii'
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
++
++
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > border > fn('Hello', { style: 'ascii' }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
────────────────────────────────────────────────────
{
  style: 'ascii'
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
+-----+
|Hello|
+-----+
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > border > fn('Hello', { style: 'bold' }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
────────────────────────────────────────────────────
{
  style: 'bold'
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
┏━━━━━┓
┃Hello┃
┗━━━━━┛
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > border > fn('Hello', { style: 'double' }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
────────────────────────────────────────────────────
{
  style: 'double'
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
╔═════╗
║Hello║
╚═════╝
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > border > fn('Hello', { style: 'rounded' }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
────────────────────────────────────────────────────
{
  style: 'rounded'
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
╭─────╮
│Hello│
╰─────╯
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > border > fn('Hello', { style: 'single' }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
────────────────────────────────────────────────────
{
  style: 'single'
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
┌─────┐
│Hello│
└─────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > border > fn('Hello\\nWorld', { style: 'single' }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
World
────────────────────────────────────────────────────
{
  style: 'single'
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
┌─────┐
│Hello│
│World│
└─────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > border > fn('Hi\\nHello\\nH', { style: 'single' }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hi
Hello
H
────────────────────────────────────────────────────
{
  style: 'single'
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
┌─────┐
│Hi   │
│Hello│
│H    │
└─────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > border > fn('Line 1\\nLine 2\\nLine 3', { style: 'rounded' }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Line 1
Line 2
Line 3
────────────────────────────────────────────────────
{
  style: 'rounded'
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
╭──────╮
│Line 1│
│Line 2│
│Line 3│
╰──────╯
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > border > partial > fn('Hello', { edges: { bottom: '-' } }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
────────────────────────────────────────────────────
{
  edges: {
    bottom: '-'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
Hello
-----
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > border > partial > fn('Hello', { edges: { left: '|' } }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
────────────────────────────────────────────────────
{
  edges: {
    left: '|'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
|Hello
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > border > partial > fn('Hello', { edges: { left: '|', right: '|' } }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
────────────────────────────────────────────────────
{
  edges: {
    left: '|',
    right: '|'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
|Hello|
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > border > partial > fn('Hello', { edges: { right: '|' } }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
────────────────────────────────────────────────────
{
  edges: {
    right: '|'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
Hello|
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > border > partial > fn('Hello', { edges: { top: '-' } }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
────────────────────────────────────────────────────
{
  edges: {
    top: '-'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
-----
Hello
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > border > partial > fn('Hello', { edges: { top: '-', bottom: '-' } }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
────────────────────────────────────────────────────
{
  edges: {
    top: '-',
    bottom: '-'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
-----
Hello
-----
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > border > partial > fn('Hello', { edges: { top: '-', left: '|' } }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
────────────────────────────────────────────────────
{
  edges: {
    top: '-',
    left: '|'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
-----
|Hello
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > border > partial > fn('Hello\\nWorld', { edges: { left: '|' } }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
World
────────────────────────────────────────────────────
{
  edges: {
    left: '|'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
|Hello
|World
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > border > partial > fn('Hello\\nWorld', { edges: { top: '=', bottom: '=' } }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
World
────────────────────────────────────────────────────
{
  edges: {
    top: '=',
    bottom: '='
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
=====
Hello
World
=====
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > combined > fn('Hello') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
┌─────────┐
│         │
│  Hello  │
│         │
└─────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > combined > fn('Hello\\nWorld') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
World
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
┌─────────┐
│         │
│  Hello  │
│  World  │
│         │
└─────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > combined > full features > fn('A', 'B') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
A
────────────────────────────────────────────────────
B
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
╔═════╗
║     ║
║  A  ║
║     ║
║  B  ║
║     ║
╚═════╝
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > content > styled > fn('Plain text', { text: 'Red text', color: { foreground: 'red' } }, 'More plain', { text: 'Bold blue', color: { foreground: 'blue' }, bold: true }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Plain text
────────────────────────────────────────────────────
{
  text: 'Red text',
  color: {
    foreground: 'red'
  }
}
────────────────────────────────────────────────────
More plain
────────────────────────────────────────────────────
{
  text: 'Bold blue',
  color: {
    foreground: 'blue'
  },
  bold: true
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
╔══════════════════════════════════════╗
║Plain text                            ║
║                                      ║
║[38;2;255;0;0mRed text[39m          ║
║                                      ║
║More plain                            ║
║                                      ║
║[1m[38;2;0;0;255mBold blue[39m[22m║
╚══════════════════════════════════════╝
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > content > styled > fn({ text: 'Bold Text', color: { foreground: 'green' }, bold: true }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  text: 'Bold Text',
  color: {
    foreground: 'green'
  },
  bold: true
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
┌──────────────────────────────────────┐
│[1m[38;2;0;128;0mBold Text[39m[22m│
└──────────────────────────────────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > content > styled > fn({ text: 'Fancy', color: { foreground: 'magenta' }, bold: true, underline: true }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  text: 'Fancy',
  color: {
    foreground: 'magenta'
  },
  bold: true,
  underline: true
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
┌─────────────────────────────────────────────┐
│[4m[1m[38;2;255;0;255mFancy[39m[22m[24m│
└─────────────────────────────────────────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > content > styled > fn({ text: 'Hello', color: { foreground: 'red' } }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  text: 'Hello',
  color: {
    foreground: 'red'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
┌─────────────────────────┐
│[38;2;255;0;0mHello[39m│
└─────────────────────────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > full box model > fn('content') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
content
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING

        
    ┌───────────┐    
    │           │    
    │  content  │    
    │           │    
    └───────────┘    


╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > gap > horizontal > fn('A', 'B', 'C') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
A
────────────────────────────────────────────────────
B
────────────────────────────────────────────────────
C
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
ABC
---
A   B   C
---
A  B  C
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > gap > nested > fn('X') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
X
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
┌─┐
│X│
└─┘

╔═╗
║X║
╚═╝

╭─╮
│X│
╰─╯
---
┌─┐  ╔═╗  ╭─╮
│X│  ║X║  │X│
└─┘  ╚═╝  ╰─╯
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > gap > vertical > fn('A', 'B', 'C') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
A
────────────────────────────────────────────────────
B
────────────────────────────────────────────────────
C
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
A
B
C
---
A


B


C
---
A

B

C
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > gap > vertical > fn('Item 1', 'Item 2') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Item 1
────────────────────────────────────────────────────
Item 2
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
Item 1
Item 2
---
Item 1


Item 2
---
Item 1

Item 2
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > horizontal > border > fn('OK') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
OK
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
╔══╗
║OK║
╚══╝
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > horizontal > margin > fn('Hi') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hi
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
┌──┐
   │Hi│
   └──┘
---
┌──┐   
│Hi│   
└──┘   
---

┌──┐
│Hi│
└──┘
---
┌──┐
│Hi│
└──┘

╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > horizontal > padding > fn('Hello') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
Hello
---
Hello  
---

Hello
---
Hello

---
    
  Hello  

╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > immutable > axishand > fn('Hello') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING

  ┌─────────────┐  
  │             │  
  │             │  
  │    Hello    │  
  │             │  
  │             │  
  └─────────────┘  

╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > immutable > fn('Hello') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
┌───────┐
│  Hello│
└───────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > immutable > new features > fn('Hello') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
Hello
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > margin > axishand > fn('Hello') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING

    
  ┌─────┐  
  │Hello│  
  └─────┘  


---
        
        
    ┌─────┐    
    │Hello│    
    └─────┘    


---
       
   ┌─────┐    
   │Hello│    
   └─────┘    


---
        
    ┌─────┐    
    │Hello│    
    └─────┘    


---
      
      
      ┌─────┐
      │Hello│
      └─────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > margin > axishand > fn('Hello\\nWorld') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
World
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING

    
  ┌─────┐  
  │Hello│  
  │World│  
  └─────┘  


---
        
        
    ┌─────┐    
    │Hello│    
    │World│    
    └─────┘    


---
       
   ┌─────┐    
   │Hello│    
   │World│    
   └─────┘    


---
        
    ┌─────┐    
    │Hello│    
    │World│    
    └─────┘    


---
      
      
      ┌─────┐
      │Hello│
      │World│
      └─────┘
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > nested > deep > fn('core') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
core
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
╔════════════╗
║  ┌──────┐  ║
║  │      │  ║
║  │+----+│  ║
║  │|core|│  ║
║  │+----+│  ║
║  │      │  ║
║  └──────┘  ║
╚════════════╝
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > nested > vertical > fn('content') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
content
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
╔═════════════╗
║Header       ║
║┌───────────┐║
║│  content  │║
║└───────────┘║
║Footer       ║
╚═════════════╝
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > pad > axishand > fn('Hello') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING

    
  Hello  


---
        
        
    Hello    


---
       
   Hello    


---
        
    Hello    


---
      
      
      Hello
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > pad > axishand > fn('Hello\\nWorld') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
World
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING

    
  Hello  
  World  


---
        
        
    Hello    
    World    


---
       
   Hello    
   World    


---
        
    Hello    
    World    


---
      
      
      Hello
      World
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > pad > fn('', { mainStart: 1, crossStart: 2 }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS

────────────────────────────────────────────────────
{
  mainStart: 1,
  crossStart: 2
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING


╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > pad > fn('Hello', { crossEnd: 2 }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
────────────────────────────────────────────────────
{
  crossEnd: 2
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
Hello
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > pad > fn('Hello', { crossStart: 2 }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
────────────────────────────────────────────────────
{
  crossStart: 2
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
Hello
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > pad > fn('Hello', { crossStart: 2, crossEnd: 2 }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
────────────────────────────────────────────────────
{
  crossStart: 2,
  crossEnd: 2
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
Hello
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > pad > fn('Hello', { mainEnd: 1 }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
────────────────────────────────────────────────────
{
  mainEnd: 1
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
Hello

╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > pad > fn('Hello', { mainStart: 0, mainEnd: 0, crossStart: 0, crossEnd: 0 }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
────────────────────────────────────────────────────
{
  mainStart: 0,
  mainEnd: 0,
  crossStart: 0,
  crossEnd: 0
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
Hello
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > pad > fn('Hello', { mainStart: 1 }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
────────────────────────────────────────────────────
{
  mainStart: 1
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING

Hello
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > pad > fn('Hello', { mainStart: 1, crossStart: 2, mainEnd: 1, crossEnd: 2 }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
────────────────────────────────────────────────────
{
  mainStart: 1,
  crossStart: 2,
  mainEnd: 1,
  crossEnd: 2
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING

  Hello  

╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > pad > fn('Hello', { mainStart: 1, mainEnd: 1 }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
────────────────────────────────────────────────────
{
  mainStart: 1,
  mainEnd: 1
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING

Hello

╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > pad > fn('Hello\\nWorld', { crossStart: 2 }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
World
────────────────────────────────────────────────────
{
  crossStart: 2
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
Hello
  World
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > pad > fn('Hello\\nWorld', { crossStart: 2, crossEnd: 2 }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
World
────────────────────────────────────────────────────
{
  crossStart: 2,
  crossEnd: 2
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
Hello  
  World
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > pad > fn('Hello\\nWorld', { mainStart: 1, mainEnd: 1 }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
World
────────────────────────────────────────────────────
{
  mainStart: 1,
  mainEnd: 1
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING

Hello
World

╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > span + spanRange > priority > fn('Hello') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
Hello
---
Hello
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > span > absolute > fn('Hello') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
Hello
---
Hello
---
Hello
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > span > absolute > fn('Hi\\nWorld') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hi
World
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
Hi
World
---
Hi
World
---
Hi
World
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > span > axishand > fn('Hello') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hello
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
Hello
---
Hello
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > spanRange > constraints > fn('Hi') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Hi
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
Hi
---
Hi        
---
Hi
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > spanRange > constraints > fn('VeryLongContent') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
VeryLongContent
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
VeryL
---
VeryLongContent
---
VeryLongCont
╚══════════════════════════════════════════════════╝"
`;

exports[`Str.Box > spanRange > multiline > fn('Line1\\nLine2') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Line1
Line2
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
Line1
---
Line1
Line2
     
     

╚══════════════════════════════════════════════════╝"
`;
